--- a/vgg16_GAP.ipynb
+++ b/vgg16_GAP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -383,35 +383,29 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "156/156 [==============================] - 348s 2s/step - loss: 0.0172 - acc: 0.9941 - val_loss: 1.4911 - val_acc: 0.7214\n",
+      "156/156 [==============================] - 514s 3s/step - loss: 0.0166 - acc: 0.9953 - val_loss: 1.3666 - val_acc: 0.7222\n",
       "Epoch 2/50\n",
-      "156/156 [==============================] - 346s 2s/step - loss: 0.0105 - acc: 0.9970 - val_loss: 1.6910 - val_acc: 0.7082\n",
+      "156/156 [==============================] - 357s 2s/step - loss: 0.0122 - acc: 0.9958 - val_loss: 1.1213 - val_acc: 0.7639\n",
       "Epoch 3/50\n",
-      "156/156 [==============================] - 345s 2s/step - loss: 0.0100 - acc: 0.9974 - val_loss: 1.7714 - val_acc: 0.7160\n",
+      "156/156 [==============================] - 354s 2s/step - loss: 0.0092 - acc: 0.9970 - val_loss: 1.9253 - val_acc: 0.6755\n",
       "Epoch 4/50\n",
-      "156/156 [==============================] - 345s 2s/step - loss: 0.0105 - acc: 0.9968 - val_loss: 2.5696 - val_acc: 0.6154\n",
+      "156/156 [==============================] - 350s 2s/step - loss: 0.0128 - acc: 0.9957 - val_loss: 1.5886 - val_acc: 0.7078\n",
       "Epoch 5/50\n",
-      "156/156 [==============================] - 345s 2s/step - loss: 0.0098 - acc: 0.9969 - val_loss: 1.3575 - val_acc: 0.7517\n",
+      "156/156 [==============================] - 351s 2s/step - loss: 0.0087 - acc: 0.9967 - val_loss: 1.8673 - val_acc: 0.6995\n",
       "Epoch 6/50\n",
-      "156/156 [==============================] - 344s 2s/step - loss: 0.0092 - acc: 0.9971 - val_loss: 1.8209 - val_acc: 0.7003\n",
+      "156/156 [==============================] - 352s 2s/step - loss: 0.0087 - acc: 0.9968 - val_loss: 1.3648 - val_acc: 0.7422\n",
       "Epoch 7/50\n",
-      "156/156 [==============================] - 344s 2s/step - loss: 0.0068 - acc: 0.9976 - val_loss: 1.8285 - val_acc: 0.6825\n",
+      "156/156 [==============================] - 352s 2s/step - loss: 0.0074 - acc: 0.9977 - val_loss: 2.1056 - val_acc: 0.6590\n",
       "Epoch 8/50\n",
-      "156/156 [==============================] - 343s 2s/step - loss: 0.0085 - acc: 0.9971 - val_loss: 2.0708 - val_acc: 0.6551\n",
+      "156/156 [==============================] - 348s 2s/step - loss: 0.0061 - acc: 0.9986 - val_loss: 1.8202 - val_acc: 0.6821\n",
       "Epoch 9/50\n",
-      "156/156 [==============================] - 341s 2s/step - loss: 0.0070 - acc: 0.9982 - val_loss: 1.5586 - val_acc: 0.7226\n",
+      "156/156 [==============================] - 344s 2s/step - loss: 0.0079 - acc: 0.9979 - val_loss: 1.8915 - val_acc: 0.6895\n",
       "Epoch 10/50\n",
-      "156/156 [==============================] - 344s 2s/step - loss: 0.0068 - acc: 0.9979 - val_loss: 1.3916 - val_acc: 0.7626\n",
+      "156/156 [==============================] - 347s 2s/step - loss: 0.0073 - acc: 0.9979 - val_loss: 2.3759 - val_acc: 0.6638\n",
       "Epoch 11/50\n",
-      "156/156 [==============================] - 341s 2s/step - loss: 0.0058 - acc: 0.9982 - val_loss: 1.9596 - val_acc: 0.6812\n",
+      "156/156 [==============================] - 349s 2s/step - loss: 0.0062 - acc: 0.9980 - val_loss: 2.0713 - val_acc: 0.6825\n",
       "Epoch 12/50\n",
-      "156/156 [==============================] - 341s 2s/step - loss: 0.0057 - acc: 0.9979 - val_loss: 2.3810 - val_acc: 0.6372\n",
-      "Epoch 13/50\n",
-      "156/156 [==============================] - 342s 2s/step - loss: 0.0070 - acc: 0.9978 - val_loss: 1.5831 - val_acc: 0.7139\n",
-      "Epoch 14/50\n",
-      "156/156 [==============================] - 342s 2s/step - loss: 0.0056 - acc: 0.9982 - val_loss: 1.4738 - val_acc: 0.7321\n",
-      "Epoch 15/50\n",
-      "156/156 [==============================] - 342s 2s/step - loss: 0.0059 - acc: 0.9979 - val_loss: 1.6738 - val_acc: 0.7178\n"
+      "156/156 [==============================] - 349s 2s/step - loss: 0.0073 - acc: 0.9976 - val_loss: 1.8584 - val_acc: 0.6786\n"
      ]
     }
    ],
@@ -425,7 +419,7 @@
     "    layer.trainable = True\n",
     "    \n",
     "vgg16_model.compile(loss='categorical_crossentropy',\n",
-    "                    optimizer=optimizers.SGD(lr=1e-4, momentum=0.9), #,decay=1e-6,nesterov=True),\n",
+    "                    optimizer=optimizers.SGD(lr=1e-4, momentum=0.9,decay=1e-6,nesterov=True),\n",
     "#                     optimizer=optimizers.Adam(),\n",
     "                    metrics=['accuracy']) \n",
     "    \n",
@@ -439,7 +433,35 @@
     "                                   CSVLogger('vgg16_fine_tune'),\n",
     "                                  EarlyStopping(patience=10)])\n",
     "\n",
-    "vgg16_model.save('vgg16_GAP_fc_11_adam.h5')"
+    "vgg16_model.save('vgg16_GAP_fc_11_SDG.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for layer in vgg16_model.layers[:7]:\n",
+    "#     layer.trainable = False\n",
+    "    \n",
+    "# for layer in vgg16_model.layers[7:]:\n",
+    "#     layer.trainable = True\n",
+    "    \n",
+    "# vgg16_model.compile(loss='categorical_crossentropy',\n",
+    "#                     optimizer=optimizers.SGD(lr=1e-4, momentum=0.9,decay=1e-6,nesterov=True),\n",
+    "# #                     optimizer=optimizers.Adam(),\n",
+    "#                     metrics=['accuracy']) \n",
+    "    \n",
+    "# vgg16_model.fit_generator(\n",
+    "#                         train_generator,\n",
+    "#                         steps_per_epoch=nb_train_samples // batch_size,\n",
+    "#                         epochs=50,\n",
+    "#                         validation_data=validation_generator,\n",
+    "#                         validation_steps=nb_val_samples // batch_size,\n",
+    "#                         callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
+    "#                                    CSVLogger('vgg16_fine_tune'),\n",
+    "#                                   EarlyStopping(patience=10)])"
    ]
   },
   {
